drop preview, it hurst more than it helps